[package]
name = "x86-instruction-set-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Wish <breezewish@outlook.com>"]
license = "MIT"
description = "Analyze x86 instruction sets for a binary"
readme = "README.md"
homepage = "https://github.com/breezewish/x86-instruction-set-analyzer"
repository = "https://github.com/breezewish/x86-instruction-set-analyzer"
keywords = ["cli", "x86", "instruction-set"]
categories = ["command-line-utilities"]
publish = true

[dependencies]
iced-x86 = "1.21.0"
object = "0.35.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
